--- a/MC2 Dictionary/View/Base.lproj/Main.storyboard
+++ b/MC2 Dictionary/View/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" image=""/>
                                                 <connections>
-                                                    <segue destination="ree-jx-XcB" kind="show" identifier="Terjemahan" id="8y4-1J-6E3"/>
+                                                    <segue destination="0NF-Nn-lJy" kind="show" identifier="Terjemahan" id="gyk-wh-fPH"/>
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Scroll untuk melihat kata-kata keren lainnya" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DAq-zM-X9J">
@@ -122,6 +122,7 @@
                         <outlet property="scrollView" destination="D4w-Ro-OmY" id="XrU-Fc-Ron"/>
                         <outlet property="tableVie" destination="kKH-yn-Fnz" id="Rcw-bB-G7O"/>
                         <outlet property="textField" destination="jok-A6-58E" id="phj-Vd-TTV"/>
+                        <segue destination="nXK-KN-EAh" kind="show" identifier="topikSegue" id="qaQ-7w-psH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -129,22 +130,21 @@
             <point key="canvasLocation" x="1762.3188405797102" y="129.91071428571428"/>
         </scene>
         <!--Terjemahan-->
-        <scene sceneID="W8F-gu-yjJ">
+        <scene sceneID="GdF-sT-Jiq">
             <objects>
-                <viewController id="ree-jx-XcB" customClass="TranslationPage" customModule="MC2_Dictionary" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="oM1-7q-vyQ">
+                <viewController id="0NF-Nn-lJy" customClass="TranslationPage" customModule="MC2_Dictionary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bdj-oZ-PP7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="288" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PXZ-jX-Gqg">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="288" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="exc-IS-xuV">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.97254901960784312" green="0.98039215686274506" blue="0.9882352941176471" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.97254901959999995" green="0.98039215690000003" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="translationCell" rowHeight="288" id="hUr-4n-S0S">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="translationCell" rowHeight="288" id="JsV-Hr-VFz">
                                         <rect key="frame" x="0.0" y="28" width="414" height="288"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hUr-4n-S0S" id="xig-QB-cfG">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JsV-Hr-VFz" id="jbh-CN-7ZV">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="288"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
@@ -152,17 +152,111 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.97254901960784312" green="0.98039215686274506" blue="0.9882352941176471" alpha="1" colorSpace="calibratedRGB"/>
-                        <viewLayoutGuide key="safeArea" id="Osf-PW-yDt"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="exc-IS-xuV" firstAttribute="top" secondItem="xpR-q2-P1q" secondAttribute="top" id="1Jr-F7-ja8"/>
+                            <constraint firstItem="exc-IS-xuV" firstAttribute="trailing" secondItem="xpR-q2-P1q" secondAttribute="trailing" id="FI8-3v-1UQ"/>
+                            <constraint firstAttribute="bottom" secondItem="exc-IS-xuV" secondAttribute="bottom" id="QjA-lH-dH3"/>
+                            <constraint firstItem="exc-IS-xuV" firstAttribute="leading" secondItem="xpR-q2-P1q" secondAttribute="leading" id="e4p-Ox-Qze"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xpR-q2-P1q"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Terjemahan" id="Ixm-sk-zVw"/>
+                    <navigationItem key="navigationItem" title="Terjemahan" largeTitleDisplayMode="always" id="eg5-RH-7Ml">
+                        <barButtonItem key="rightBarButtonItem" title="Latihan" style="plain" id="mg7-HM-yYG">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lKX-Pu-SIW">
+                                <rect key="frame" x="302" y="5.5" width="92" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Latihan"/>
+                                <connections>
+                                    <segue destination="Eye-BJ-E9U" kind="show" id="RXi-vH-tid"/>
+                                </connections>
+                            </button>
+                            <connections>
+                                <action selector="latihanButton:" destination="eCk-hV-cPm" id="lb9-Dt-lDv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="translationView" destination="PXZ-jX-Gqg" id="ADF-VR-i23"/>
+                        <outlet property="translationView" destination="exc-IS-xuV" id="MFV-Qs-YBS"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NMb-Uk-MJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aBK-Rx-bOA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="eCk-hV-cPm" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2634.7826086956525" y="129.91071428571428"/>
+            <point key="canvasLocation" x="2604" y="-169"/>
+        </scene>
+        <!--Next Features-->
+        <scene sceneID="M9n-0e-7Se">
+            <objects>
+                <viewController id="Eye-BJ-E9U" customClass="nextFeatures" customModule="MC2_Dictionary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Vzc-Sm-cb3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Group 8" translatesAutoresizingMaskIntoConstraints="NO" id="lnV-Hl-6NY">
+                                <rect key="frame" x="30" y="194" width="354" height="297"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dalam Pengembangan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rpo-no-eHD">
+                                <rect key="frame" x="30" y="538" width="354" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3AC-JH-AfB">
+                                <rect key="frame" x="37" y="594" width="340" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">Detect live Sign Language Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="6yf-u3-eQB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="khy-yt-uhP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3500.0000000000005" y="-169.41964285714286"/>
+        </scene>
+        <!--Topik Title-->
+        <scene sceneID="ajI-Ds-FJI">
+            <objects>
+                <viewController id="nXK-KN-EAh" customClass="topikPreferences" customModule="MC2_Dictionary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8y2-2f-4Sv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="105" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UbF-2a-XxW">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.97254901960784312" green="0.98039215686274506" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="topikViewCell" rowHeight="105" id="ipY-nJ-1ew">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="105"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ipY-nJ-1ew" id="DtB-IY-Fz8">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97254901960784312" green="0.98039215686274506" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="NGr-0a-4oe"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Topik Title" id="f9F-eb-3K6"/>
+                    <connections>
+                        <outlet property="preferencesTopik" destination="UbF-2a-XxW" id="7y1-RV-DKb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s04-w6-q5L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2602.898550724638" y="501.5625"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wcO-y2-5n8">
@@ -186,6 +280,7 @@
     </scenes>
     <resources>
         <image name="Arrow-down - simple-line-icons" width="20" height="11"/>
+        <image name="Group 8" width="353" height="297"/>
         <image name="" width="18" height="18"/>
     </resources>
 </document>
