--- a/MC2 Dictionary/View/TranslationTableViewCell.xib
+++ b/MC2 Dictionary/View/TranslationTableViewCell.xib
@@ -29,12 +29,14 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Group 3" translatesAutoresizingMaskIntoConstraints="NO" id="Gx7-BW-FIt">
                         <rect key="frame" x="20" y="58" width="374" height="210"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <gestureRecognizers/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="terjemahan" destination="FEf-Oh-XkW" id="Xj5-FD-n7b"/>
+                <outlet property="videoTap" destination="Gx7-BW-FIt" id="EPc-KZ-3Wk"/>
             </connections>
             <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
         </tableViewCell>
